@@ -1,36 +1,25 @@
 package com.dor.package_zipper.controller;
 
-import java.util.List;
-import java.util.stream.Collector;
-import java.util.stream.Collectors;
-
 import com.dor.package_zipper.configuration.AppConfig;
 import com.dor.package_zipper.models.Artifact;
+import com.dor.package_zipper.models.ShipmentLevel;
 import com.dor.package_zipper.models.ZipRemoteEntry;
 import com.dor.package_zipper.models.ZipStreamerBody;
 import com.dor.package_zipper.services.ArtifactResolverService;
 import com.google.gson.Gson;
-
+import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.core.io.buffer.DataBuffer;
-import org.springframework.core.io.buffer.DataBufferUtils;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.bind.annotation.*;
 import org.springframework.web.reactive.function.BodyInserters;
 import org.springframework.web.reactive.function.client.WebClient;
-import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBody;
-
-import lombok.AllArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
+
+import java.util.List;
 
 @RestController
 @Slf4j
@@ -39,102 +28,56 @@ public class PackageZipperController {
     private final AppConfig appConfig;
     private final ArtifactResolverService artifactResolverService;
 
-    @PostMapping("/zip/stream")
-    public ResponseEntity<StreamingResponseBody> StreamArtifactZip(@RequestBody Artifact artifact,
-                                                                   @RequestParam(defaultValue = "true") boolean transitivity) {
-        return StreamZippedArtifact(artifact, transitivity);
-    }
-
-    @PostMapping("/zip/stream/multi")
-    public ResponseEntity<StreamingResponseBody> StreamArtifactsZip(@RequestBody List<Artifact> artifacts,
-                                                                    @RequestParam(defaultValue = "true") boolean transitivity) {
-        final Flux<DataBuffer> dataBufferFlux = getZipStream(
-            artifactResolverService.resolveArtifacts(artifacts, transitivity));
-        StreamingResponseBody stream = output -> DataBufferUtils
-            .write(dataBufferFlux,
-                output)
-            .doOnError(e -> log.error("Error writing to stream", e))
-            .doOnComplete(() -> log.info("Streaming artifact zip complete artifact: {}",
-                artifacts))
-            .blockLast();
-        // TODO mabye need use DataBufferUtils.releaseConsumer()
-        return ResponseEntity.ok()
-            .header(HttpHeaders.CONTENT_DISPOSITION,
-                "attachment; filename=multi.zip")
-            .contentType(MediaType.APPLICATION_OCTET_STREAM)
-            .body(stream);
-
-    }
-
-    @PostMapping(value = "/zip/stream/pom", consumes = {
-        "multipart/form-data"
-    })
-    public ResponseEntity<StreamingResponseBody> getPOMArtifactsZip(@RequestParam("file") MultipartFile pomFile,
-                                                                    @RequestParam(defaultValue = "true", name = "transitivity") boolean transitivity) {
-        final Flux<DataBuffer> dataBufferFlux = getZipStream(
-            artifactResolverService.resolveArtifactFromPom(pomFile, transitivity));
-        StreamingResponseBody stream = output -> DataBufferUtils
-            .write(dataBufferFlux,
-                output)
-            .doOnError(e -> log.error("Error writing to stream", e))
-            .doOnComplete(() -> log.info("Streaming pom artifact zip complete artifact: {}",
-                pomFile.getOriginalFilename()))
-            .blockLast();
-        // TODO mabye need use DataBufferUtils.releaseConsumer()
-        return ResponseEntity.ok()
-            .header(HttpHeaders.CONTENT_DISPOSITION,
-                "attachment; filename=" + pomFile.getOriginalFilename().replace(".pom", "") + ".zip")
-            .contentType(MediaType.APPLICATION_OCTET_STREAM)
-            .body(stream);
-
-    }
-
     @GetMapping(value = "/zip/stream")
-    public ResponseEntity<StreamingResponseBody> getStreamArtifactZip(@RequestParam String groupId,
-                                                                      @RequestParam String artifactId, @RequestParam String version,
-                                                                      @RequestParam(defaultValue = "true") boolean transitivity) {
-        Artifact artifact = new Artifact(groupId, artifactId, version);
-        return StreamZippedArtifact(artifact, transitivity);
+    public ResponseEntity<Flux<DataBuffer>> getStreamArtifactZip(@RequestParam String groupId,
+                                                                 @RequestParam String artifactId,
+                                                                 @RequestParam String version,
+                                                                 @RequestParam(defaultValue = "exactly") ShipmentLevel level) {
+        return streamZippedArtifact(new Artifact(groupId, artifactId, version), level);
     }
 
     @GetMapping(value = "/zip/stream/{artifact}")
-    public ResponseEntity<StreamingResponseBody> getStreamArtifactZip(@PathVariable String artifact,
-                                                                      @RequestParam(defaultValue = "true") boolean transitivity) {
-        Artifact artifactObj = new Artifact(artifact);
-
-        return StreamZippedArtifact(artifactObj, transitivity);
+    public ResponseEntity<Flux<DataBuffer>> getStreamArtifactZip(@PathVariable String artifact,
+                                                                 @RequestParam(defaultValue = "exactly") ShipmentLevel level) {
+        return streamZippedArtifact(new Artifact(artifact), level);
     }
 
-    private ResponseEntity<StreamingResponseBody> StreamZippedArtifact(Artifact artifact,
-                                                                       boolean withTransitivity) {
+    @PostMapping("/zip/stream")
+    public ResponseEntity<Flux<DataBuffer>> streamArtifactZip(@RequestBody Artifact artifact,
+                                                              @RequestParam(defaultValue = "exactly") ShipmentLevel level) {
+        return streamZippedArtifact(artifact, level);
+    }
+
+    @PostMapping("/zip/stream/multi")
+    public ResponseEntity<Flux<DataBuffer>> streamArtifactsZip(@RequestBody List<Artifact> artifacts,
+                                                               @RequestParam(defaultValue = "exactly") ShipmentLevel level) {
         final Flux<DataBuffer> dataBufferFlux = getZipStream(
-            artifactResolverService.resolveArtifact(artifact, withTransitivity));
-        StreamingResponseBody stream = output -> DataBufferUtils
-            .write(dataBufferFlux,
-                output)
-            .doOnError(e -> log.error("Error writing to stream", e))
-            .doOnComplete(() -> log.info("Streaming artifact zip complete artifact: {}",
-                artifact.getArtifactFullName()))
-            .blockLast();
-        // TODO mabye need use DataBufferUtils.releaseConsumer()
+                artifactResolverService.resolveArtifacts(artifacts, level));
         return ResponseEntity.ok()
-            .header(HttpHeaders.CONTENT_DISPOSITION,
-                "attachment; filename=" + artifact.getArtifactFullName() + ".zip")
-            .contentType(MediaType.APPLICATION_OCTET_STREAM)
-            .body(stream);
+                .header(HttpHeaders.CONTENT_DISPOSITION,
+                        "attachment; filename=multi.zip")
+                .contentType(MediaType.APPLICATION_OCTET_STREAM)
+                .body(dataBufferFlux);
     }
 
-    private Flux<DataBuffer> getZipStream(Flux<ZipRemoteEntry> zipRemoteEntries) {
-        Mono<ZipStreamerBody> body = zipRemoteEntries.collectList().map( list ->{
-            return new ZipStreamerBody(list.stream().distinct().collect(Collectors.toList()));
-        } );
-        body.doOnNext( a -> log.info("zip streamer request body: {}", new Gson().toJson(a)));
+    public ResponseEntity<Flux<DataBuffer>> streamZippedArtifact(Artifact artifact, ShipmentLevel level) {
+        return ResponseEntity.ok()
+                .header(HttpHeaders.CONTENT_DISPOSITION,
+                        "attachment; filename=" + artifact.getArtifactFullName() + ".zip")
+                .contentType(MediaType.APPLICATION_OCTET_STREAM)
+                .body(getZipStream(artifactResolverService.resolveArtifact(artifact, level)));
+    }
+
+    private Flux<DataBuffer> getZipStream(List<ZipRemoteEntry> zipRemoteEntries) {
+        Gson gson = new Gson();
+        Mono<ZipStreamerBody> body = Mono.just(new ZipStreamerBody(zipRemoteEntries.stream().distinct().toList()))
+                .doOnNext(a -> log.info("zip streamer request body: {}", gson.toJson(a)));
+        log.info("the stream zipper url is: " + appConfig.getStreamZipperUrl());
         return WebClient.create(appConfig.getStreamZipperUrl())
-            .post().uri("/download_zip")
-            .body(BodyInserters.fromProducer(body, ZipRemoteEntry.class))
-            .accept(MediaType.APPLICATION_OCTET_STREAM)
-            .retrieve()
-            .bodyToFlux(DataBuffer.class);
+                .post().uri("/download")
+                .body(BodyInserters.fromProducer(body, ZipRemoteEntry.class))
+                .accept(MediaType.APPLICATION_OCTET_STREAM)
+                .retrieve()
+                .bodyToFlux(DataBuffer.class);
     }
-
 }
